Toast overflow fix

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -55,7 +55,7 @@
 }
 
 .toast-container {
-  width: 450px;
+  width: auto;
   left: 30px;
   bottom: 30px;
 
